Fixed the style issue for vertical scrollbar

--- a/src/app/layout/main-layout/main-layout.component.scss
+++ b/src/app/layout/main-layout/main-layout.component.scss
@@ -5,7 +5,7 @@
     'header header'
     'sidebar main';
   grid-template-rows: 68px 1fr;
-  grid-template-columns: 260px 1fr;
+  grid-template-columns: 255px 1fr;
 }
 
 .header-area {
